Microsoft Print to PDF stuck in printing only Color outputs
Categories
(Core :: Printing: Setup, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox80 | --- | unaffected |
| firefox81 | --- | disabled |
| firefox82 | + | verified |
People
(Reporter: emilghitta, Assigned: emilio)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression, Whiteboard: [print2020_v81] [old-ui-])
Attachments
(3 files)
Affected versions
- 82.0a1 (BuildId:20200827212940)
- 81.0b3 (BuildId:20200827203325)
Affected platforms
- Windows 10 64bit
Unaffected platforms
- Ubuntu 20.04 64bit
- macOS 10.14
Steps to reproduce
- Launch Firefox.
- Access any random webpage.
- Hit CTRL + P.
- Select the “Microsoft Print to PDF” option from the destination menu.
- Change between "black & white" and "color" options from the Color mode dropdown menu.
Expected result
- The changes reflect inside the print preview and in actual print output.
Actual result
- The change doesn’t reflect in print preview nor in the actual print output.
Regression Window
- This seems to be a regression. I will investigate this asap.
Additional Information
- For further information regarding this issue please observe the attached screencast.
- [Suggested severity] S2
| Reporter | ||
Updated•5 years ago
|
Updated•5 years ago
|
Updated•5 years ago
|
Comment 1•5 years ago
|
||
Using mozregression I tracked this down to bug 1660986. Emilio, can you take a look at this?
| Assignee | ||
Comment 2•5 years ago
|
||
Pretty sure this is bug 1661645.
Comment 3•5 years ago
|
||
(Removing the whiteboard tag for easier tracking.)
| Reporter | ||
Comment 4•5 years ago
|
||
Bug 1661645 has landed in m-c but I can still reproduce this issue using Firefox 82.0a1 (BuildId:20200901214943) test page
Adding the [print2020_81] tag back for now.
Updated•5 years ago
|
Comment 5•5 years ago
|
||
Based on the regressing bug, and that we get the "supportsColor" and "supportsMonochrome" from the platform side, I think this is a platform bug… (Fortunately, Emilio is already cc-ed on it. 😉)
Comment 7•5 years ago
|
||
Mark S2 for now (and thanks for taking a look at this, Emilio.)
Comment 8•5 years ago
|
||
Works for me on buildid: 20200902215721 on my Windows 10 laptop.
Comment 9•5 years ago
|
||
Okay, I could reproduce this. To reproduce it, probably the color mode option had been disabled once (by changing destination to one which is not color available).
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 10•5 years ago
|
||
They don't. Right now we get to GetDataFromPrinter from
nsDeviceContextSpecWin with mPrintInColor = false, but this copy back
and forth ends up setting it to true:
Even if you avoid that, the printed file ends up being in color. This is
a bit of a hack, the right long-term fix is to detect whether the
printer supports monochrome in Gecko (add an attribute to nsIPrinter)
and communicate it to the front-end.
There's no equivalent to DC_COLORDEVICE but for monochrome in:
https://docs.microsoft.com/en-us/windows/win32/api/wingdi/nf-wingdi-devicecapabilitiesa
I think we could check if DC_FIELDS returns the COLOR field or such.
I'll poke at doing that but this is less risky.
| Assignee | ||
Comment 11•5 years ago
|
||
This moves the special cases to the printing platform code instead
(where it belongs).
The SupportsMonochrome() implementation is the only thing that I found
to work for the "Microsoft Print to PDF" driver, but other similar
drivers like XPS still claim to support monochrome (even though it's not
true). This should avoid the UI getting in a bad state as described in
the bug though, so may be better?
Depends on D89306
Comment 12•5 years ago
|
||
Comment 13•5 years ago
|
||
Updated•5 years ago
|
Comment 14•5 years ago
|
||
| bugherder | ||
Comment 15•5 years ago
|
||
| bugherder | ||
Comment 16•5 years ago
|
||
Is this something we need to take on Beta still or can this ride 82 to release?
Comment 17•5 years ago
|
||
It can ride.
Updated•5 years ago
|
Comment 18•5 years ago
|
||
Reproduced the initial issue using old Nightly build (2020-08-28), verified that using Firefox 82.0b3 the Color Mode section is grayed out and disabled for Microsoft Print to PDF and Save to PDF.
Comment 19•5 years ago
|
||
Description
•