widget/nsPrinterCUPS.h
@@ -20,6 +20,7 @@ class nsPrinterCUPS final : public nsPrinterBase {
   PrintSettingsInitializer DefaultSettings() const final;
   bool SupportsDuplex() const final;
   bool SupportsColor() const final;
+  bool SupportsMonochrome() const final;
   bool SupportsCollation() const final;
   nsTArray<mozilla::PaperInfo> PaperList() const final;
   MarginDouble GetMarginsForPaper(uint64_t) const final {
